--- a/style.css
+++ b/style.css
@@ -1,10 +1,40 @@
 body {
     margin: 0;
 }
+form {
+    margin:0;
+    padding: 0.2em;
+}
+form > * {
+    margin-right: 0.5em;
+}
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+.config {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+.config > * {
+    padding: 0.5em;
+}
+.config .actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.config .parameters {
+    align-self: center;
+}
+.config .parameters form {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .files {
@@ -13,20 +43,25 @@ ul {
 
 #fileList {
     display: flex;
-    align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 
 #fileList > li > img {
-    height: 240px
+    height: 240px;
+    cursor: pointer;
 }
 
 .outputs {
     display: flex;
-    align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: nowrap;
 }
 
 .outputs > * {
     width: 50%;
+}
+
+.outputs img {
+    width: 100%;
 }
