--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ ul {
     flex-wrap: nowrap;
 }
 
-.outputs > * {
+/* .outputs > * {
     width: 50%;
 }
 
 .outputs img {
     width: 100%;
-}
+} */
